Update .gitignore and upload quick install apk

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,6 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+
+# except for apks below quick_install folder
+!quick_install/*
